# sync_app_rust

./: .gitignore  Cargo.toml  Dockerfile.build.ubuntu16.04  Dockerfile.build.ubuntu18.04  Dockerfile.test.ubuntu18.04  Makefile  README.md
.github/workflows/: rust.yml
gcs_lib/: Cargo.toml
gcs_lib/src/: lib.rs
gdrive_lib/: Cargo.toml
gdrive_lib/src/: date_time_wrapper.rs  directory_info.rs  drive_v3_types.rs  gcs_instance.rs  gdrive_instance.rs  lib.rs  rate_limiter.rs  storage_v1_types.rs
migrations/: V01__file_info_cache.sql  V05__authorized_users.sql  V06__file_sync_blacklist.sql  V07__file_sync_config_name.sql  V08__integer_to_uuid.sql  V09__file_sync_config_uuid.sql  V10__file_info_cache_modified_at.sql
migrations/2019-04-27-180302_file_info_cache/: down.sql  up.sql
migrations/2019-05-28-215928_directory_info_cache/: down.sql  up.sql
migrations/2019-11-16-121244_file_sync_cache/: down.sql  up.sql
migrations/2019-11-16-185636_file_sync_config/: down.sql  up.sql
migrations/2021-02-22-124714_file_info_cache_deleted_at/: down.sql  up.sql
migrations/2021-02-22-130512_file_info_cache_make_not_null/: down.sql  up.sql
scripts/: Dockerfile  backup_db.sh  bootstrap_db.sh  build_deb_docker.sh  clear_db.sh  openapi.yaml  restore_db.sh
src/: config.rs  directory_info.rs  export_old_gdrive_diary_elog.rs  file_info.rs  file_info_gdrive.rs  file_info_local.rs  file_info_s3.rs  file_info_ssh.rs  file_list.rs  file_list_gdrive.rs  file_list_local.rs  file_list_s3.rs  file_list_ssh.rs  file_service.rs  file_sync.rs  gdrive_instance.rs  lib.rs  main.rs  models.rs  onedrive_instance.rs  pgpool.rs  s3_instance.rs  schema.rs  ssh_instance.rs  sync_opts.rs  sync_rust_http.rs
stack_string/: Cargo.toml
stack_string/src/: lib.rs
sync_app_http/: Cargo.toml
sync_app_http/src/: app.rs  elements.rs  errors.rs  lib.rs  logged_user.rs  requests.rs  routes.rs
sync_app_lib/: Cargo.toml
sync_app_lib/src/: calendar_sync.rs  config.rs  date_time_wrapper.rs  directory_info.rs  file_info.rs  file_info_gcs.rs  file_info_gdrive.rs  file_info_local.rs  file_info_s3.rs  file_info_ssh.rs  file_list.rs  file_list_gcs.rs  file_list_gdrive.rs  file_list_local.rs  file_list_s3.rs  file_list_ssh.rs  file_service.rs  file_sync.rs  file_watch_local.rs  garmin_sync.rs  gdrive_instance.rs  iso_8601_datetime.rs  lib.rs  local_session.rs  main.rs  models.rs  movie_sync.rs  path_buf_wrapper.rs  pgpool.rs  reqwest_session.rs  s3_instance.rs  schema.rs  security_sync.rs  ssh_instance.rs  sync_client.rs  sync_opts.rs  url_wrapper.rs  weather_sync.rs
templates/: index.html  index.html.hbr  scripts.js
tests/data/: onedrive.credentials
