[package]
name = "sync_app_rust"
version = "0.8.15"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "sync-app-rust"
priority = "optional"
section = "rust"
provides = "sync-app-rust"
extended-description = """\
Sync files between computers and cloud storage services."""

[dependencies]
log = "0.4"
env_logger = "0.9"
sync_app_lib = {path = "sync_app_lib"}
sync_app_http = {path = "sync_app_http"}
gdrive_lib = {path="gdrive_lib"}
tokio = {version="1.9", features=["full"]}
anyhow = "1.0"
dirs = "4.0"
walkdir = "2.3"
chrono = "0.4"
futures = "0.3"
stack-string = { version="0.5", features=["postgres_types"] }

[workspace]
members = [
    "sync_app_http",
    "sync_app_lib",
    "gdrive_lib",
]

[[bin]]
name = "sync-app-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "sync-app-http"
path = "src/sync_rust_http.rs"
doc = false

[[bin]]
name = "export-old-gdrive-diary-elog"
path = "src/export_old_gdrive_diary_elog.rs"
doc = false
