[package]
name = "sync_app_rust"
version = "0.9.10"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "sync-app-rust"
priority = "optional"
section = "rust"
provides = "sync-app-rust"
extended-description = """\
Sync files between computers and cloud storage services."""

[dependencies]
log = "0.4"
env_logger = "0.9"
sync_app_lib = {path = "sync_app_lib"}
sync_app_http = {path = "sync_app_http"}
gdrive_lib = {path="gdrive_lib"}
tokio = {version="1.19", features=["full"]}
anyhow = "1.0"
dirs = "4.0"
walkdir = "2.3"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
futures = "0.3"
stack-string = { version="0.7", features=["postgres_types"] }

[workspace]
members = [
    "sync_app_http",
    "sync_app_lib",
    "gdrive_lib",
]

[[bin]]
name = "sync-app-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "sync-app-http"
path = "src/sync_rust_http.rs"
doc = false
