[package]
name = "sync_app_rust"
version = "0.12.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "sync-app-rust"
priority = "optional"
section = "rust"
provides = "sync-app-rust"
extended-description = """\
Sync files between computers and cloud storage services."""

[dependencies]
sync_app_http = {path = "sync_app_http"}
sync_app_lib = {path = "sync_app_lib"}
anyhow = "1.0"
dirs = "5.0"
env_logger = "0.11"
futures = "0.3"
gdrive_lib = {path="gdrive_lib"}
log = "0.4"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.0.2" }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.41", features=["rt", "macros", "rt-multi-thread"]}
walkdir = "2.3"

[workspace]
members = [
    "sync_app_http",
    "sync_app_lib",
    "gdrive_lib",
]

[[bin]]
name = "sync-app-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "sync-app-http"
path = "src/sync_rust_http.rs"
doc = false
