[package]
name = "gdrive_lib"
version = "0.5.20"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3-fork = "1.0.10"
hyper = "0.10"
hyper-native-tls = "0.3.0"
yup-oauth2 = "1.0"
mime = "0.2"
parking_lot = "0.11"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
percent-encoding = "2.1"
url = "2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
retry = "1.1"
chrono = "0.4"
rayon = "1.4"
anyhow = "1.0"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.1.6", features=["diesel_types"] }
