[package]
name = "gdrive_lib"
version = "0.10.10"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-rustls = "0.24"
hyper = { version = "0.14", features = ["stream"] }
parking_lot = "0.12"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
percent-encoding = "2.1"
url = "2.3"
bytes = "1.1"
derive_more = "0.99"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
anyhow = "1.0"
itertools = "0.11"
rand = "0.8"
futures = "0.3"
mime = "0.3"
crossbeam = "0.8"
deadqueue = "0.2"
postgres-types = {version = "0.2", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
async-google-apis-common = { git = "https://github.com/ddboline/async-google-apis.git", branch="time-0.3" }
tokio = {version="1.26", features=["full"]}
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.1" }
stdout-channel = "0.6"
