[package]
name = "gdrive_lib"
version = "0.13.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-google-apis-common = { git = "https://github.com/ddboline/async-google-apis.git", branch="time-0.3" }
bytes = "1.1"
crossbeam = "0.8"
deadqueue = "0.2"
derive_more = {version="2.0", features = ["full"]}
futures = "0.3"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
mime = "0.3"
once_cell = "1.0"
parking_lot = "0.12"
percent-encoding = "2.1"
postgres-types = {version = "0.2", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rand = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stack-string = { version="1.1", features=["postgres_types"] }
stdout-channel = "0.6"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
url = "2.3"
tokio = {version="1.42", features=["rt", "macros", "rt-multi-thread"]}
