[package]
name = "stack_string"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
smartstring = "0.2"
serde = {version="1.0", features=["derive"]}
