[package]
name = "sync_app_http"
version = "0.10.10"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
lazy_static = "1.4"
parking_lot = "0.12"
sync_app_lib = {path = "../sync_app_lib"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version="1.26", features=["time"]}
futures = "0.3"
url = "2.3"
anyhow = "1.0"
thiserror = "1.0"
maplit = "1.0"
async-trait = "0.1"
log = "0.4"
dirs = "5.0"
itertools = "0.11"
indexmap = "1.9"
serde_yaml = "0.9"
stdout-channel = "0.6"
uuid = "1.0"
deadqueue = "0.2"
dioxus = "0.4"
dioxus-ssr = "0.4"
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls"], default_features=false}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.1-1"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.0-1" }
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.1" }
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.10.8"}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
