[package]
name = "sync_app_http"
version = "0.11.19"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.15"}
deadqueue = "0.2"
dioxus = "0.5"
dioxus-core = "0.5"
dioxus-ssr = "0.5"
dirs = "5.0"
futures = "0.3"
itertools = "0.13"
log = "0.4"
maplit = "1.0"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls"], default-features=false}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.2"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.3" }
stdout-channel = "0.6"
sync_app_lib = {path = "../sync_app_lib"}
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.38", features=["time"]}
url = "2.3"
uuid = "1.0"
