[package]
name = "sync_app_lib"
version = "0.9.12"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdrive_lib = {path="../gdrive_lib"}
rusoto_core = {version = "0.48", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.48", default_features = false, features=["rustls"]}
s3-ext = "0.5"
sts_profile_auth = "0.7"
url = "2.2"
dotenv = "0.15"
walkdir = "2.3"
rayon = "1.5"
checksums = "0.9"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
structopt = "0.3"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
lazy_static = "1.4"
maplit = "1.0"
mime = "0.3"
rand = "0.8"
percent-encoding = "2.1"
parking_lot = "0.12"
log = "0.4"
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls"], default_features=false}
crossbeam-utils = "0.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "4.0"
derive_more = "0.99"
tokio = {version="1.19", features=["full"]}
async-trait = "0.1"
futures = "0.3"
itertools = "0.10"
envy = "0.4"
tempfile = "3.1"
smallvec = "1.6"
arc-swap = "1.2"
env_logger = "0.9"
bytes = "1.1"
uuid = "1.1"
refinery = {version="0.8", features=["tokio-postgres"]}
deadpool = { version = "0.9", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.10", features=["serde"] }
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
postgres-types = {version = "0.2", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
stdout-channel = "0.5"
stack-string = { version="0.7", features=["postgres_types"] }
