[package]
name = "sync_app_lib"
version = "0.11.19"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = {version="1.0", features=["behavior-version-latest"]}
aws-types = "1.0"
aws-sdk-s3 = "1.1"
bytes = "1.1"
checksums = "0.9"
clap = {version="4.0", features=["derive"]}
crossbeam-utils = "0.8"
deadpool = { version = "0.12", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.14", features=["serde"] }
derive_more = "0.99"
dirs = "5.0"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
gdrive_lib = {path="../gdrive_lib"}
itertools = "0.13"
log = "0.4"
maplit = "1.0"
mime = "0.3"
once_cell = "1.0"
parking_lot = "0.12"
percent-encoding = "2.1"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = {version = "0.2", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rand = "0.8"
rayon = "1.5"
refinery = {version="0.8", features=["tokio-postgres"]}
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls"], default_features=false}
rust_decimal = "1.26"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
stdout-channel = "0.6"
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.38", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
url = "2.3"
uuid = "1.1"
walkdir = "2.3"

[dev-dependencies]
env_logger = "0.11"
